--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
   "presets": [
     "@babel/preset-env",
-    "@babel/preset-react"
-  ],
+   ["@babel/preset-react", {"runtime": "automatic"}]
+],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-transform-runtime"
